--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.290.0",
+    "aws-sdk": "^2.1335.0",
     "bcryptjs": "^2.4.3",
     "bson": "^5.0.1",
     "cors": "^2.8.5",
@@ -18,6 +20,8 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.10.0",
+    "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1"
   }
